--- a/educational-core/resources/style/scrollbars/darcula.css
+++ b/educational-core/resources/style/scrollbars/darcula.css
@@ -1,13 +1,3 @@
-.scroll-bar,
-.scroll-bar-corner,
-.scroll-bar:horizontal .track,
-.scroll-bar:vertical .track,
-.scroll-bar:vertical .track-background,
-.scroll-bar:horizontal .track-background {
-    -fx-background-color: #3c3f41;
-}
-
-.scroll-bar:horizontal .thumb,
-.scroll-bar:vertical .thumb {
-    -fx-background-color: #bbbbbb;
+::-webkit-scrollbar-thumb {
+    background-color: rgba(128, 128, 128, 0.34901960784313724);
 }
