--- a/educational-core/resources/style/scrollbars/light.css
+++ b/educational-core/resources/style/scrollbars/light.css
@@ -1,13 +1,3 @@
-.scroll-bar,
-.scroll-bar-corner,
-.scroll-bar:horizontal .track,
-.scroll-bar:vertical .track,
-.scroll-bar:vertical .track-background,
-.scroll-bar:horizontal .track-background {
-    -fx-background-color: #ffffff;
-}
-
-.scroll-bar:horizontal .thumb,
-.scroll-bar:vertical .thumb {
-    -fx-background-color: #c9c9c9;
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
 }
